== Version 0.6.5

* add Autobuild.default_packages
* big rdoc update
* allow to reference pkg-config packages not built by autobuild.
  The .pc file is used as installation stamp file

== Version 0.6.4

This is a bugfix release

* More checks for working copy sanity: check that the target working copy
  has been created by the right tools before doing anything. Update test
  suite so that these parts of the importers is tested
* Since we grep 'svn info' output, make sure that its output will be in 
  english by setting LC_ALL to C

== Version 0.6.3

* CVS and SVN importing plugins check that the current working copy comes from
  the right source
* the autotools and genom package are now reconfiguring if the flags
  (configureflags and/or genomflags) changed
* bugfixes

== Version 0.6.2

Small changes

* added the Ruby package, which does an import and builds all C extensions
* added the pkgconfig package, which allows to use an already-installed package
  if this packages can be found through pkg-config
* check that working copies that are already checked out are from the right
  source (for CVS and Subversion)

== Version 0.6.1

Bugfixes

* fix dependency handling for Genom modules. In particular, we add 
  dependencies between the module generation and the installed
  genom files (includes, canvas, and the genom executable). Information
  is taken from the pkg-config file
* new package types: InstalledPkgConfig, to reuse pkg-config based packages
  installed by another autobuild script

== Version 0.6

Use a Ruby-based DSL instead of YAML config files. It is waaaaaay more
powerful and waaay cleaner. See demo.rb for an example

* Added the Darcs importer
* Fixes in dependency handling
* Uses Rake 0.7

== Version 0.5.1

Fixes the release process, in which the bin/ directory was not distributed

* 0.5 gem did not include bin/autobuild (which obviously was not good). Fix that

== Version 0.5

Fixes the mail default behaviour. Added the 'tar' importer.
